--- a/linux-rt-bfq-git/PKGBUILD
+++ b/linux-rt-bfq-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-rt-bfq-git
 # pkgname=('linux-rt-bfq-git' 'linux-rt-bfq-git-headers' 'linux-rt-bfq-git-docs')
 _major=5.4
 _srcname=linux-rt-devel
-pkgver=5.4.26.rt17.r0.ga44e3fb72c92
+pkgver=5.4.28.rt19.r0.g5fbf1e70f11d
 pkgrel=1
 pkgdesc='Linux RT-BFQ-dev'
 arch=('x86_64')
@@ -63,7 +63,7 @@ _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 # Some patches for BFQ conflict with patches for BFQ-dev.
 # To use linux-rt-bfq-git smoothly apply bfq-reverts before bfq-dev patch. 
 # Otherwise the kernel will not compile.
-_bfq_rev_path="bfq-reverts-all"
+_bfq_rev_path="bfq-reverts-all-v2"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v11"
@@ -341,7 +341,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'bd6576b43ec0f4f730110a68fc9541fd6ab763e1247fa977751f89fcf959f3a20c4018fc85d9a1dc80ee35799536859f1980476ea143fb9b124a2d9f79f57fef'
+            '13e6e0221526899b1c7efbcc269f92bce47fd332ec222c59e767e05f72b9a496d6d884998d351532c1d7013054b34558ef54aaff6f43f22caf887ea19c70103a'
             '43fd3c3c5870f9fc83208580839c2726dbec2b0e8341e336bd5ac981a87f8b934f0b060eb1c675fa279abe078776380b27de690d72081ed547779e765b098ad1'
             '2eb574fbfac6e334d3b06e52e466dbf8e88034515729b6571990b10f75a0fe2a52f188615405c5a695b5820669e595deead44d7961a97c5872359be3435fdf63'
             'e725a711b4ab20d32ba3095b75ded88b6173fa5ceccd8f345de8f94251f22539dfc52e4543c8bd574562072cd5c9ccaf07c9a5321a74ef94a2a911783698fbf6'
