--- a/linux-rt-bfq-dev-git/PKGBUILD
+++ b/linux-rt-bfq-dev-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-rt-bfq-dev-git
 # pkgname=('linux-rt-bfq-dev-git' 'linux-rt-bfq-dev-git-headers' 'linux-rt-bfq-dev-git-docs')
 _major=5.6
 _srcname=linux-rt-devel
-pkgver=5.6.17.rt9.r0.g9991a07fc0c2
+pkgver=5.6.19.rt11.r0.g41f8505e5601
 pkgrel=2
 pkgdesc='Linux RT-BFQ-dev'
 arch=('x86_64')
@@ -340,4 +340,4 @@ sha512sums=('SKIP'
             '8c0ca7ab292e6f1a75fd4ae0de797259bf68a5f1512b9f0c905250446ebb924531589d4b8d4d9d7fb1cdd65658b32a8528a7fb7056947d7b31bdc87b4e424752'
             '4ef82534e202188bec24232a60af73d48870c7f0b3403ec821b132c38cdccc9917037d74dd94cbcbc6be70cf45006e7ace928c32623cecb5289251c2eb4ea1d8'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            'efbb7005a81c86abfd19d070d683ecbc185e7015780cbbd77a32838a5cc953b7f4e0ee3944807e7b4631d326db50945a0838be7b7cdd945cf657a61fc39fad00')
+            '3ca0b0d64f115ff08dbd1a66efa00968884286f83c45e5fa6cc63120d743413b909780d8fec8a8467b4f5c52a897d017a7d34a68e4904f905fefbf47c7cdeddc')
