--- a/linux-rt-bfq-dev-git/PKGBUILD
+++ b/linux-rt-bfq-dev-git/PKGBUILD
@@ -58,8 +58,8 @@ _branch='linux-stable-rt'
 pkgbase=linux-rt-bfq-dev-git
 # pkgname=('linux-rt-bfq-dev-git' 'linux-rt-bfq-dev-git-headers' 'linux-rt-bfq-dev-git-docs')
 _major=5.15
-pkgver=5.15.10.rt24.r0.gf9d4aa10e706
-pkgrel=3
+pkgver=5.15.12.rt25.r0.g1907da15a603
+pkgrel=1
 pkgdesc='Linux RT-BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -365,4 +365,4 @@ sha512sums=('SKIP'
             '9b14bede21e9979f843b624d0aaca389df93f388fdff9f1361d132aebca31e19b2e47dd1b4e83af0bbaae3a1884ac09a3605d3373cfd48eab0c49a8b11d0165a'
             '8f2f6e1e3ee9cd58217daf6bf5385865732f2521bd084925d923d5477a294cbadfa60f3955b745c0a33bb97bb7fb0f3b829724930601354551caafbc76544fab'
             'da2a99e0c6bc593e4e873c9ec7ce99cf31f12100efa6375805d935b2f0e7618d8a22d46929a7f5ff5cc86ed89309b292e698a28a7d288f95448f264f80bb7012'
-            '37f326824e35359b699de9c8263c4427fbb71efd59cce8a61d23ce1d9035c8be5c7d85f3c9ea0821dc0a027ae05d429f3b838ef3ec58137baa911cd859f6d760')
+            '5f8c796bfd7d5c3dc7e86d3fe372241f3d21fed7d2f7545d3855ac7b344d696eba0c6e0204094d9e99f121b15eba51cae4b3242d64b1e88a7e0902d7dfc60ed3')
